# catalyrst

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  clippy.toml  flake.nix  seed-third-party.sql
crates/catalyrst-ab-cdn/: Cargo.toml
crates/catalyrst-ab-cdn/src/: config.rs  handlers.rs  index.rs  lib.rs  main.rs  resolver.rs  serve.rs  state.rs
crates/catalyrst-ab-registry/: Cargo.toml
crates/catalyrst-ab-registry/src/: config.rs  lib.rs  main.rs  resolve.rs  types.rs
crates/catalyrst-abgen/: .gitignore  Cargo.toml  OPERATIONS.md  build.rs
crates/catalyrst-abgen/examples/: atlasprobe.rs  crndump.rs  jpegprobe.rs  lodaabb.rs  loddump.rs  matdump.rs  objdump.rs  ressdump.rs  texcmp.rs  texcmp2.rs  texdump.rs  texpng.rs
crates/catalyrst-abgen/kernel-ptx/: BUILD.md  Cargo.toml  INTERFACE.md  flake.nix
crates/catalyrst-abgen/shader/: scene_ignore_mac  scene_ignore_windows
crates/catalyrst-abgen/src/: alpha_bleed.rs  animation.rs  animation_mecanim.rs  bc5_pure.rs  bc7_mode_tree.rs  bc7_pure.rs  builder.rs  bundle.rs  cabname.rs  catalyst.rs  clihelp.rs  compress.rs  dates.rs  detmath.rs  draco.rs  dxt1_pure.rs  dxt_unity.rs  ffi.rs  ffi_wasm.rs  glbscan.rs  gltf.rs  gpu_dispatch.rs  hashes.rs  lib.rs  live.rs  local_store.rs  lods.rs  lz4.rs  manifest.rs  materials.rs  mesh_layout.rs  naming.rs  normals.rs  pathids.rs  placeholder.rs  png.rs  regen.rs  resize.rs  ress.rs  sbp_order.rs  (+11 more)
crates/catalyrst-abgen/template/: all-types.windows.bundle  animated-types.windows.bundle  emote-types.windows.bundle  skinned-types.windows.bundle
crates/catalyrst-abgen/wasm-poc/: Cargo.toml  README.md  build.rs  build.sh  serve.sh
crates/catalyrst-archipelago/: Cargo.toml  build.rs
crates/catalyrst-archipelago/src/: auth.rs  ban.rs  cluster.rs  config.rs  content.rs  gossip.rs  handlers.rs  lib.rs  livekit.rs  main.rs  proto.rs  state.rs  ws.rs
crates/catalyrst-archipelago/tests/: ban_check.rs  http_shapes.rs  proto_wire.rs  ws_island_dedup.rs
crates/catalyrst-badges/: Cargo.toml  ROUTES.md
crates/catalyrst-badges/migrations/: 0001_initial.sql  0002_seed_fixture.sql  0003_admin_grant_audit.sql  0004_admin_revoke_audit.sql
crates/catalyrst-badges/src/: admin.rs  config.rs  lib.rs  main.rs
crates/catalyrst-bench/: Cargo.toml
crates/catalyrst-bench/benches/: hotpath.rs
crates/catalyrst-builder/: Cargo.toml  ROUTES.md  catalyrst-builder.env.example
crates/catalyrst-builder/migrations/: 0001_initial.sql  0002_item_curation.sql
crates/catalyrst-builder/src/: auth_chain.rs  config.rs  lib.rs  main.rs
crates/catalyrst-builder/tests/: curation_auth.rs  curation_auth_fuzz.rs
crates/catalyrst-bvimposters/: Cargo.toml  ROUTES.md
crates/catalyrst-bvimposters/src/: bake.rs  cdn.rs  config.rs  handlers.rs  key.rs  lib.rs  main.rs  quarantine.rs  quarantine_list.rs  seed.rs  store.rs  supply.rs  zips.rs
crates/catalyrst-camera-reel/: Cargo.toml  ROUTES.md
crates/catalyrst-camera-reel/deploy/: catalyrst-camera-reel.env.example  catalyrst-camera-reel.service
crates/catalyrst-camera-reel/migrations/: 20260609000000_camera_reel_images.sql  20260619000000_camera_reel_review_status.sql
crates/catalyrst-camera-reel/src/: admin.rs  auth_chain.rs  config.rs  docs.rs  dto.rs  http.rs  lib.rs  main.rs
crates/catalyrst-camera-reel/tests/: metadata_public.rs
crates/catalyrst-comms/: Cargo.toml  TODO.md
crates/catalyrst-comms/examples/: mls_client.rs
crates/catalyrst-comms/migrations/: 0001_comms.sql  0002_user_moderation.sql  0003_private_messages_privacy.sql  0004_mls_messaging.sql  0005_published_events.sql  0006_player_connection_and_device_bans.sql  0007_community_voice_chat_sid.sql
crates/catalyrst-comms/src/: auth_chain.rs  config.rs  extract.rs  http.rs  lib.rs  main.rs  mls.rs  moderator.rs  room_metadata_sync.rs  scene_perms.rs  voice_db.rs  voice_logic.rs
crates/catalyrst-comms/tests/: ban_hardening.rs  device_bans.rs  scene_ban_keying.rs  scene_participants_roster.rs
crates/catalyrst-communities/: Cargo.toml  ROUTES.md  TODO.md
crates/catalyrst-communities/examples/: smoke_create.rs
crates/catalyrst-communities/migrations/: 0001_initial.sql  0004_thumbnail_hash.sql  0007_friend_messages.sql
crates/catalyrst-communities/src/: auth_chain.rs  config.rs  content_store.rs  events.rs  http.rs  lib.rs  main.rs  validate.rs
crates/catalyrst-communities/tests/: content_store.rs  federation_smoke.rs  join_and_ban_integrity.rs  listing_visibility.rs  name_color.rs  online_members.rs  v2_address_only.rs
crates/catalyrst-conformance/: Cargo.toml  volatility.toml
crates/catalyrst-conformance/fixtures/: README.md
crates/catalyrst-conformance/src/: bootstrap.rs  capture.rs  checks.rs  diff.rs  fixture.rs  lib.rs  main.rs  retry.rs  sections.rs  volatility.rs
crates/catalyrst-create/: Cargo.toml
crates/catalyrst-create/src/: main.rs
crates/catalyrst-credits/: Cargo.toml  ROUTES.md
crates/catalyrst-credits/migrations/: 0001_initial.sql  0002_admin_audit.sql  0003_grant_idempotency.sql  0004_hard_currency.sql  0005_packs.sql  0006_cart_checkout.sql  0009_cart_collection.sql  0010_partial_refund_tracking.sql  0011_goal_progress.sql  0012_credit_buckets.sql  0013_outbox_basis_wei.sql  0014_pack_seed.sql  0015_outbox_trade_id.sql
crates/catalyrst-credits/src/: auth_chain.rs  captcha.rs  config.rs  dto.rs  http.rs  lib.rs  main.rs  provider.rs  purchase_intent.rs
crates/catalyrst-crypto/: Cargo.toml
crates/catalyrst-data/: Cargo.toml
crates/catalyrst-db/: Cargo.toml
crates/catalyrst-deploy-signer/: Cargo.toml
crates/catalyrst-deployer/: Cargo.toml
crates/catalyrst-economy/: Cargo.toml  ROUTES.md
crates/catalyrst-enet/: Cargo.toml
crates/catalyrst-events/: Cargo.toml  ROUTES.md  TODO.md
crates/catalyrst-explore/: Cargo.toml
crates/catalyrst-explorer-api/: Cargo.toml
crates/catalyrst-fed/: Cargo.toml
crates/catalyrst-fuzz/: Cargo.toml
crates/catalyrst-governance/: Cargo.toml  catalyrst-governance.service  env.example
crates/catalyrst-hashing/: Cargo.toml
crates/catalyrst-lists/: Cargo.toml  ROUTES.md
(+1549 files in other folders)
