[package]
name = "catalyrst-ab-cdn"
version = "0.1.0"
edition = "2021"
description = "Rust reimplementation of ab-cdn.decentraland.org — stateless content-addressed static server over abgen's on-disk output root"

[[bin]]
name = "catalyrst-ab-cdn"
path = "src/main.rs"

[dependencies]
catalyrst-server = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
moka = { version = "0.12", features = ["future"] }
