[package]
name = "catalyrst-ab-cdn"
version = "0.1.0"
edition = "2021"
description = "Unified content / asset-bundle server: serves pre-built bundles from the corpus, converts misses in-process (writing them into the corpus, then re-serving so corpus-hit and JIT-miss are byte-and-header identical), and passes native content (scene.json / main.crdt / bin/*) from the content store. Supersedes ab-cdn + abgen-serve + the nginx passthrough."

[[bin]]
name = "catalyrst-ab-cdn"
path = "src/main.rs"

[dependencies]
catalyrst-server = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
moka = { version = "0.12", features = ["future"] }
sqlx = { workspace = true }
chrono = { workspace = true }
# Unified asset-bundle serving: abgen provides the conversion logic + the
# disk-or-remote CatalystClient content abstraction used for native content
# passthrough (scene.json / main.crdt / bin/*). Lib target name is `abgen`.
abgen = { path = "../catalyrst-abgen", package = "catalyrst-abgen" }
# Folded AB index (entities/active + /versions): reuse the registry's content
# query (ContentComponent -> ActiveEntity with timestamp/deployer/content/metadata)
# for byte-exact response parity. Transitional — a future shared crate lets the
# standalone ab-registry crate retire entirely; for now this guarantees identical
# responses for the route swap.
catalyrst-registry = { path = "../catalyrst-registry" }
