[package]
name = "catalyrst-abgen"
version = "0.9.11"
edition = "2021"
description = "Decentraland asset-bundle conversion logic (vendored from abgen-rs) — clean-room reimplementation of asset-bundle-converter. Provides build_bundle + the disk-or-remote CatalystClient content abstraction consumed by the unified asset-bundle serving crate."
license = "AGPL-3.0-or-later"

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "abgen"
path = "src/lib.rs"

[[bin]]
name = "abgen"
path = "src/bin/abgen.rs"

[[bin]]
name = "abgen-corpus"
path = "src/bin/abgen-corpus/main.rs"

[[bin]]
name = "abgen-verify"
path = "src/bin/abgen-verify.rs"

[[bin]]
name = "abgen-lod"
path = "src/bin/abgen-lod/main.rs"

[[example]]
name = "texdump"
path = "examples/texdump.rs"

[[example]]
name = "matdump"
path = "examples/matdump.rs"

[[example]]
name = "crndump"
path = "examples/crndump.rs"

[[example]]
name = "objdump"
path = "examples/objdump.rs"

[[example]]
name = "texcmp"
path = "examples/texcmp.rs"

[[example]]
name = "texcmp2"
path = "examples/texcmp2.rs"

[[example]]
name = "texpng"
path = "examples/texpng.rs"

[[example]]
name = "jpegprobe"
path = "examples/jpegprobe.rs"

[[example]]
name = "loddump"
path = "examples/loddump.rs"

[[example]]
name = "lodaabb"
path = "examples/lodaabb.rs"

[[example]]
name = "ressdump"
path = "examples/ressdump.rs"

[[example]]
name = "atlasprobe"
path = "examples/atlasprobe.rs"

[[bin]]
name = "catalyrst-abgen"
path = "src/bin/catalyrst-abgen.rs"
required-features = ["folded-registry"]

[features]
gpu = []
gpu-wgpu = ["gpu", "dep:wgpu"]
gpu-all = ["gpu-wgpu"]
server = []
content-db = ["server", "dep:sqlx", "dcl-contents/pg"]
folded-registry = ["content-db", "dep:catalyrst-registry"]

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "float_roundtrip", "raw_value"] }
psd = "0.3"
libc = "0.2"
rayon = "1"
num_cpus = "1"
anyhow = "1"
brotli = "8"
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
libm = "=0.2.16"
draco_decoder = { path = "third_party/draco_decoder" }
texpresso = "2"
crunch_ffi = { path = "third_party/crunch" }
libjpeg9c = { path = "third_party/libjpeg9c" }
texture2ddecoder = "0.1"
wgpu = { version = "=30.0.0", optional = true, default-features = false, features = ["std", "wgsl", "vulkan", "metal", "dx12"] }

tracing = { workspace = true }
chrono = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.25"
ureq = "3"
memmap2 = "0.9"
postgres = "0.19"
meshopt = "=0.6.2"
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
moka = { version = "0.12", features = ["future"] }
sqlx = { workspace = true, optional = true }
dcl-contents = { path = "../dcl-contents", default-features = false }
catalyrst-registry = { path = "../catalyrst-registry", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif", "tga"] }
meshopt = "=0.6.2"

[target.'cfg(all(not(target_os = "windows"), not(target_arch = "wasm32")))'.dependencies]
mimalloc = { version = "0.1.52", default-features = false }
