[package]
name = "catalyrst-badges"
version = "0.12.0"
edition = "2021"
description = "Rust port of decentraland/badges (REST API for badges.decentraland.org), read-only profile badge state over a dedicated postgres DB"

[[bin]]
name = "catalyrst-badges"
path = "src/main.rs"

[dependencies]
catalyrst-envcfg = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
moka = { version = "0.12", features = ["future"] }
