[package]
name = "catalyrst-builder"
version = "0.1.0"
edition = "2021"
description = "Rust port of decentraland/builder-server (builder-api.decentraland.org): collection items, content redirect, newsletter"

[[bin]]
name = "catalyrst-builder"
path = "src/main.rs"

[dependencies]
catalyrst-types = { workspace = true }
catalyrst-crypto = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ethers-signers = { workspace = true }
