[package]
name = "catalyrst-camera-reel"
version = "0.9.11"
edition = "2021"
description = "Rust port of decentraland/camera-reel-service (camera-reel-service.decentraland.org), content-addressed disk store + places_events DB"

[[bin]]
name = "catalyrst-camera-reel"
path = "src/main.rs"

[dependencies]
catalyrst-types = { workspace = true }
catalyrst-crypto = { workspace = true }
catalyrst-hashing = { workspace = true }
catalyrst-storage = { workspace = true }
catalyrst-envcfg = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true, features = ["uuid", "migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
moka = { version = "0.12", features = ["future"] }
ts-rs = { workspace = true, optional = true }

[features]
ts = ["dep:ts-rs"]
