[package]
name = "catalyrst-comms"
version = "0.9.14"
edition = "2021"
description = "Rust port of decentraland/comms-gatekeeper — LiveKit token minting, scene bans, voice chat, Cast 2.0. Port 5138."

[[bin]]
name = "catalyrst-comms"
path = "src/main.rs"

[dependencies]
catalyrst-types = { workspace = true }
catalyrst-crypto = { workspace = true }
catalyrst-envcfg = { workspace = true }
catalyrst-fed = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true, features = ["uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
parking_lot = { workspace = true }
dashmap = { workspace = true }
hex = "0.4"
sha2 = { workspace = true }
hmac = "0.13"
base64 = "0.22"
openmls = "0.8"
openmls_rust_crypto = "0.5"
openmls_traits = "0.5"
tls_codec = "0.4"
ts-rs = { workspace = true, optional = true }

[features]
ts = ["dep:ts-rs"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
openmls_basic_credential = "0.5"

[[example]]
name = "mls_client"
path = "examples/mls_client.rs"
