[package]
name = "catalyrst-communities"
version = "0.1.0"
edition = "2021"
description = "Rust port of decentraland/social-service-ea (community routes), authority-chain federation per docs/federation/communities.md"

[[bin]]
name = "catalyrst-communities"
path = "src/main.rs"

[features]
default = []
# Enable live NATS JetStream federation gossip (publish + consumer apply-loop).
# Off by default: communities reconcile via HTTP-snapshot pull (communities.md
# §5). Build with `--features nats` to wire the real broker (FED_GOSSIP=nats).
nats = ["catalyrst-fed/nats"]

[dependencies]
catalyrst-types = { workspace = true }
catalyrst-fed = { workspace = true }
catalyrst-crypto = { workspace = true }
catalyrst-server = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true, features = ["uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }
hex = "0.4"
multer = "3"
futures-util = "0.3"
parking_lot = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
ethers-signers = { workspace = true }
ethers-core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rand = "0.10"
reqwest = { workspace = true }

[[example]]
name = "smoke_create"
path = "examples/smoke_create.rs"
