[package]
name = "catalyrst-conformance"
version = "0.10.0"
edition = "2021"
description = "Side-by-side conformance / parity tester for two catalyst hosts (local catalyrst, TS catalyst, public peers, in any combination)"

[lib]
name = "catalyrst_conformance"
path = "src/lib.rs"

[[bin]]
name = "catalyrst-conformance"
path = "src/main.rs"

[[bin]]
name = "catalyrst-conformance-capture"
path = "src/bin/capture.rs"

[[bin]]
name = "catalyrst-conformance-replay"
path = "src/bin/replay.rs"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
urlencoding = "2.1"
base64 = "0.22"
walkdir = "2.5"
glob = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
